--- a/index.html
+++ b/index.html
@@ -48,8 +48,14 @@
         <div class="row">
             <!-- Map Column (Larger on medium+ screens) -->
             <div class="col-md-8 col-lg-9 p-0">
-                <div id="map"></div> <!-- The Map will be loaded here by JavaScript -->
-            </div>
+                <!-- Isko HATA DO -->
+<!-- <div id="map"></div> -->
+
+<!-- Isko LAGA DO -->
+<div id="static-map-container">
+    <img src="images/gwalior-map.png" alt="Gwalior Map" id="static-map">
+    <!-- Yaha par aap apne custom animated markers add karenge -->
+</div>
 
             <!-- Sidebar Column (Smaller on medium+ screens) -->
             <div class="col-md-4 col-lg-3 bg-light p-3" style="height: 90vh; overflow-y: auto;">
