--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <!-- Isko LAGA DO -->
 <div id="static-map-container">
-    <img src="Screenshot_20250913-100214.png" alt="Gwalior Map" id="static-map">
+    <img src="Screenshot_20250913-102804~2.png" alt="Gwalior Map" id="static-map">
     <!-- Yaha par aap apne custom animated markers add karenge -->
 </div>
 
